--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-preset-react": "6.24.1",
     "eslint": "3.19.0",
     "eslint-plugin-react": "6.10.3",
-    "lodash": "^4.17.4",
+    "lodash": "4.17.4",
+    "prop-types": "15.5.8",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "webpack": "2.4.1",
